--- a/_Imports.razor
+++ b/_Imports.razor
@@ -11,3 +11,4 @@
 @using Syncfusion.Blazor.Navigations
 @using Syncfusion.Blazor.Maps
 @using Syncfusion.Blazor.Schedule
+@using Syncfusion.Blazor.Data
