--- a/_Imports.razor
+++ b/_Imports.razor
@@ -4,11 +4,9 @@
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
+@using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
-@using Master_Detail_Grid
-@using Master_Detail_Grid.Shared
+@using MasterDetailViewGridSample
+@using MasterDetailViewGridSample.Shared
+@using Syncfusion.Blazor
 @using Syncfusion.Blazor.Grids
-@using Syncfusion.Blazor.Navigations
-@using Syncfusion.Blazor.Maps
-@using Syncfusion.Blazor.Schedule
-@using Syncfusion.Blazor.Data
